--- a/app/views/settings/password.html.erb
+++ b/app/views/settings/password.html.erb
@@ -11,7 +11,7 @@
           <input type="hidden" name="by" value="password" />
           <div class="form-group">
             <%= f.label :current_password %>
-            <%= f.text_field :current_password, class: "form-control" %>
+            <%= f.password_field :current_password, class: "form-control" %>
           </div>
           <div class="form-group">
             <%= f.label :password %>
