--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -4,7 +4,10 @@
 <div class="toolbar">
   <form class="form-inline" action="<%= admin_users_path %>">
     <div class="form-group mr-sm-2">
-      <input type="text" name="q" class="form-control" value="<%= params[:q] %>" placeholder="用户名/Email" />
+      <%= select_tag(:field, options_for_select([['用户名','login'], ['Email','email'], ['姓名','name']], params[:field]), class: 'form-control') %>
+    </div>
+    <div class="form-group mr-sm-2">
+      <input type="text" name="q" class="form-control" value="<%= params[:q] %>" placeholder="搜索" />
     </div>
     <div class="form-group mr-sm-2">
       <%= select_tag(:type, options_for_select([['全部类别',''], ['组织','Team']], params[:type]), class: 'form-control') %>
