--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -5,12 +5,29 @@
 
 @import "vars";
 
-body { color: #333; }
+body {
+  color: #333;
+}
 
-body, p, ol, ul, td {
+body,
+p,
+ol,
+ul,
+td {
   font-family: verdana, arial, helvetica, sans-serif;
-  font-size:   13px;
+  font-size: 13px;
   line-height: 18px;
+}
+
+.table {
+  tbody {
+    tr {
+      th,
+      td {
+        padding: 8px 10px;
+      }
+    }
+  }
 }
 
 .header {
@@ -28,7 +45,7 @@ body, p, ol, ul, td {
   }
 
   .user-bar {
-    background: #FFF;
+    background: #fff;
     min-width: auto;
   }
 }
@@ -36,37 +53,73 @@ body, p, ol, ul, td {
 .nav-item .nav-link {
   font-size: 14px;
   padding-left: 10px !important;
-  padding-right: 10px  !important;
+  padding-right: 10px !important;
   &.active {
     color: $red;
   }
 }
 
-.navbar-search { display: none !important; }
+.navbar-search {
+  display: none !important;
+}
 
 .card-body h1,
-fieldset legend  { border:0px; font-size: 18px; margin-top:0px; margin-bottom: 20px; padding: 0;line-height: 100%; }
+fieldset legend {
+  border: 0px;
+  font-size: 18px;
+  margin-top: 0px;
+  margin-bottom: 20px;
+  padding: 0;
+  line-height: 100%;
+}
 
 pre {
   background-color: #eee;
   padding: 10px;
   font-size: 11px;
 }
-.group { margin-bottom:20px; }
-.group h2 { font-size:12px; margin-bottom:8px; }
-.group ul { margin:0 20px;}
-.pagination { clear:both; margin-top:10px; text-align: left;}
-
-.toolbar {
-  margin-bottom:15px;
+.group {
+  margin-bottom: 20px;
+}
+.group h2 {
+  font-size: 12px;
+  margin-bottom: 8px;
+}
+.group ul {
+  margin: 0 20px;
+}
+.pagination {
+  clear: both;
+  margin-top: 10px;
+  text-align: left;
 }
 
-table tr.deleted td { text-decoration: line-through; color:#999}
+.toolbar {
+  margin-bottom: 15px;
+}
+
+table tr.deleted td {
+  text-decoration: line-through;
+  color: #999 !important;
+  a {
+    color: #999 !important;
+  }
+}
+table tr.ban td {
+  text-decoration: line-through;
+  color: #ccc !important;
+  a {
+    color: #ccc !important;
+  }
+}
 table tr td a.fa {
-    text-decoration: normal;
-    color: #666;
-    margin-right: 4px;
-    &:hover { color: #333; text-decoration: none; }
+  text-decoration: normal;
+  color: #666;
+  margin-right: 4px;
+  &:hover {
+    color: #333;
+    text-decoration: none;
+  }
 }
 
 .nav > li > a {
@@ -74,13 +127,27 @@ table tr td a.fa {
 }
 
 .stat {
-
   margin: 15px;
   padding-bottom: 15px;
   border-bottom: 1px dashed #eee;
 
-  .total { font-size: 18px; color: #555;  margin-bottom: 10px; margin-top: 8px; }
-  .name { font-size: 14px; color: #999; }
-  .total-week { color: $blue; font-size: 12px; margin: 0 10px;  }
-  .total-month { color: $green; font-size: 12px;  }
+  .total {
+    font-size: 18px;
+    color: #555;
+    margin-bottom: 10px;
+    margin-top: 8px;
+  }
+  .name {
+    font-size: 14px;
+    color: #999;
+  }
+  .total-week {
+    color: $blue;
+    font-size: 12px;
+    margin: 0 10px;
+  }
+  .total-month {
+    color: $green;
+    font-size: 12px;
+  }
 }
