--- a/app/views/admin/site_configs/index.html.erb
+++ b/app/views/admin/site_configs/index.html.erb
@@ -1,21 +1,12 @@
 <% content_for :sitemap do %>
   <span class="current"><%= t("admin.site_configs.settings") %></span>
 <% end %>
-
 <h1><%= t("admin.site_configs.settings") %></h1>
-
-<table class="table table-bordered table-striped table-condensed">
-  <tr>
-    <th>Key</th>
-    <th>说明</th>
-    <th></th>
-  </tr>
-
-<% Setting::KEYS_IN_ADMIN.each do |key| %>
-  <tr>
-    <td><a href="<%= edit_admin_site_config_path(key) %>"><%= key %></a></td>
-    <td><%= t("setting.#{key}") %></td>
-    <td class="opts"><%= link_to icon_tag("pencil"), edit_admin_site_config_path(key) %></td>
-  </tr>
-<% end %>
-</table>
+<ul class="list-group">
+  <% Setting::KEYS_IN_ADMIN.each do |key| %>
+    <li class="list-group-item">
+      <div class="mb-1"><%= icon_tag("gear") %><a href="<%= edit_admin_site_config_path(key) %>" style="font-size: 15px; color: #2162D2;"><%= key %></a></div>
+      <div class="text-gray"><%= t("setting.#{key}") %></div>
+    </li>
+  <% end %>
+</ul>
