--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,8 +1,9 @@
 <% title_tag t('topics.new_topic') %>
-
 <div class="card">
-  <div class="card-header hide-ios"><%= t('topics.new_topic') %></div>
   <div class="card-body">
+    <div class="card-title hide-ios">
+      <%= t('topics.new_topic') %>
+    </div>
     <%= render 'form' %>
   </div>
 </div>
