--- a/app/views/admin/dashboards/index.html.erb
+++ b/app/views/admin/dashboards/index.html.erb
@@ -1,8 +1,6 @@
 <% content_for :sitemap do %>
   <span class="current"><%= t("admin.overview") %></span>
 <% end %>
-
-
 <div class="toolbar">
   <div class="btn-group">
     <a href="/admin/site_configs" class="btn btn-default"><i class="fa fa-cogs"></i> <%= t("admin.site_configs.settings") %></a>
@@ -12,7 +10,10 @@
     <a href="/exception-track" class="btn btn-default" target="_blank"><i class="fa fa-warning"></i> <%= t("admin.menu.exception_logs") %>...</a>
   </div>
 </div>
-
+<div class="alert alert-info">
+  服务启动于：<%= Homeland.boot_at %>
+  <%= link_to icon_tag("power-off", label: "重启应用"), reboot_admin_dashboards_path, data: { method: :post, confirm: "你确定要重启 Homeland 吗？", disable_with: "请求中..." }, class: "text-danger pull-right" %>
+</div>
 <div class="clearfix">
   <div class="row">
     <div class="col-sm-4" id="user-stat">
@@ -25,7 +26,6 @@
         </div>
       </div>
     </div>
-
     <div class="col-sm-4" id="topic-stat">
       <div class="stat">
         <div class="total">0</div>
@@ -36,7 +36,6 @@
         </div>
       </div>
     </div>
-
     <div class="col-sm-4" id="reply-stat">
       <div class="stat">
         <div class="total">0</div>
@@ -59,7 +58,6 @@
         </div>
       </div>
     </div>
-
     <div class="col-sm-3" id="comment-stat">
       <div class="stat">
         <div class="total">0</div>
@@ -70,8 +68,6 @@
         </div>
       </div>
     </div>
-
-
     <div class="col-sm-3" id="photo-stat">
       <div class="stat">
         <div class="total">0</div>
@@ -83,7 +79,6 @@
       </div>
     </div>
   </div>
-
   <script type="text/javascript">
     function updateStatValue(data) {
       var el = $('#' + data.model + '-stat');
@@ -91,7 +86,7 @@
       el.find(".total-week").text('+' + data.week_count);
       el.find(".total-month").text('+' + data.month_count);
     }
-
+    
     var models = ['user', 'topic', 'reply', 'note', 'notification', 'photo', 'comment'];
     for (var i = 0; i < models.length; i ++) {
       var model = models[i];
@@ -101,4 +96,3 @@
     }
   </script>
 </div>
-
