Allow install/uninstall plugins via admin

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -483,6 +483,7 @@ kbd {
     font-size: 18px;
     line-height: 100%;
     display: flex;
+    align-items: center;
 
     .card-subtitle {
       margin-top: 10px;
