重构用户等级。
1. verified -> user.state = :vip;
2. Setting.admin_emails -> user.state = :admin;
3. add user.state = :maintainer;

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -699,6 +699,16 @@ img.emoji {
   text-align: center;
 }
 
+/* User role */
+.badge-role {
+  @extend .badge;
+  font-size: 12px;
+  font-weight: normal;
+  font-family: sans-serif;
+  background: #564cf5;
+  color: #fff;
+}
+
 .opts a.active {
   .fa {
     @extend .animated;
