--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -4,7 +4,7 @@
       <div class="media">
         <div class="avatar media-left mr-3">
           <div class='image'><%= user_avatar_tag(@user, :lg, link: false) %></div>
-          <div class="level"><%= render_user_level_tag(@user) %></div>
+          <div class="level"><%= user_level_tag(@user) %></div>
         </div>
         <div class="media-body">
           <div class="item">
