--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -12,6 +12,9 @@
     <div class="form-group mr-sm-2">
       <%= select_tag(:type, options_for_select([['全部类别',''], ['组织','Team']], params[:type]), class: 'form-control') %>
     </div>
+    <div class="form-group mr-sm-2">
+      <%= select_tag(:state, options_for_select(User.state_options, params[:state]), class: 'form-control', include_blank: "所有等级") %>
+    </div>
     <button class="btn btn-default">搜索</button>
   </form>
 </div>
@@ -19,9 +22,8 @@
 <table class="table table-bordered table-striped table-condensed">
   <tr class="head">
     <td class="first">#</td>
+    <td>头像</td>
     <td>帐号</td>
-    <td>姓名</td>
-    <td>Email</td>
     <td>注册时间</td>
     <td>操作</td>
   </tr>
@@ -29,10 +31,11 @@
 <% @users.each do |user| %>
   <tr>
     <td class="first"><%= user.id %></td>
-    <td><%= user_name_tag(user) %></td>
-    <td><%= user.name %></td>
-    <td><%= user.email %></td>
-    <td><%= user.created_at&.to_date %></td>
+    <td width="32"><%= user_avatar_tag(user, :sm) %></td>
+    <td>
+      <%= link_to user.fullname, user_path(user), target: "_blank" %> <%= user_level_tag(user) unless user.member? %>
+    </td>
+    <td width="120"><%= user.created_at&.to_date %></td>
     <td>
       <%= link_to '', edit_admin_user_path(user.id), class: "fa fa-pencil" %>
     </td>
