Remove homealnd-wiki, use zip plugin, and fix comment style

--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -1227,6 +1227,10 @@ textarea.div-dropzone-focus {
       padding-bottom: 0;
     }
 
+    .avatar {
+      margin-right: 20px;
+    }
+
     .info {
       font-size: 13px;
       color: #999;
