新增 sorted_plugins 配置项，用于实现插件的排序，插件以后配置不需要用 modules

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -157,3 +157,17 @@ table tr td a.fa {
     font-size: 12px;
   }
 }
+
+.plugin-item {
+  .plugin-title {
+    font-size: 16px;
+    .fa {
+      color: #aaa;
+    }
+
+    .version {
+      font-size: 14px;
+      color: #aaa;
+    }
+  }
+}
