--- a/app/views/search/_page.html.erb
+++ b/app/views/search/_page.html.erb
@@ -1,9 +1,9 @@
-<% if respond_to?(homeland_wiki) %>
-  <%
-title = hit.highlight.title.try(:first) || item.title
+<% if respond_to?(:homeland_wiki) %>
+<%
+  title = hit.highlight.title.try(:first) || item.title
 %>
   <div class="result">
-    <div class="title"><%= link_to highlight(title), homeland_wiki.page_path(item) %> <span class="badge">Wiki</span></div>
+    <div class="title"><%= link_to highlight(title), homeland_wiki.page_path(item) %> <span class="badge badge-success">Wiki</span></div>
     <div class="info">
       <span class="url"><%= link_to homeland_wiki.page_url(item), homeland_wiki.page_path(item) %></span>
       <span class="date" title="Last Updated At"><%= item.updated_at.to_date %></span>
