--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,11 +1,11 @@
 <% title_tag [params[:q], t('common.search_result')].join(' · ') %>
 
 <div class="search-results card">
-  <div class="card-header clearfix">
-    <div class="text-mutted">关于 “<%= params[:q] %>” 的搜索结果, 共 <%= @result.records.total %> 条</div>
-  </div>
-
   <div class="card-body">
+    <div class="card-title clearfix">
+      关于 “<%= params[:q] %>” 的搜索结果
+      <div class="counter">共 <%= @result.records.total %> 条</div>
+    </div>
     <% if @result.records.total == 0 %>
       <div class="no-result">没有搜索到任何有关 “<%= params[:q]%>” 的内容</div>
     <% else %>
@@ -16,7 +16,9 @@
     <% end %>
   </div>
 
+  <% if @result.total_pages > 1 %>
   <div class="card-footer clearfix">
     <%= paginate @result %>
   </div>
+  <% end %>
 </div>
